# claude-code

./: README.copilotcode.md  exercise_runner.py  pyproject.toml  run_exercise.py
.claude/: settings.local.json
copilotcode_sdk/: COMPATIBILITY.md  __init__.py  agents.py  brand.py  cli.py  client.py  compaction.py  config.py  diff.py  events.py  exercise.py  extraction.py  holistic_verifier.py  hooks.py  instructions.py  mcp.py  memory.py  micro_exercise.py  model_cost.py  permissions.py  prompt_compiler.py  reports.py  retry.py  session_memory.py  session_state.py  skill_assets.py  skill_tool.py  subagent.py  suggestions.py  task_tools.py  tasks.py  token_budget.py  tokenizer.py  verifier.py
copilotcode_sdk/examples/: basic_session.py  materialize_workspace.py
copilotcode_sdk/templates/: CLAUDE.md  (+1 more)
docs/: manual-validation.md
tests/: conftest.py  live_support.py  test_agents.py  test_assets.py  test_brand.py  test_cli.py  test_client.py  test_compaction.py  test_config.py  test_diff.py  test_events.py  test_exercise.py  test_extraction.py  test_holistic_verifier.py  test_hooks.py  test_instructions.py  test_live.py  test_live_support.py  test_main.py  test_mcp.py  test_mcp_lifecycle.py  test_memory.py  test_micro_exercise.py  test_model_cost.py  test_packaging.py  test_permissions.py  test_prompt_compiler.py  test_reports.py  test_retry.py  test_scenarios.py  test_session_memory.py  test_session_state.py  test_skill_catalog.py  test_skill_tool.py  test_subagent.py  test_suggestions.py  test_task_tools.py  test_tasks.py  test_tasks_cli.py  test_token_budget.py  (+3 more)
(+13 files in other folders)
