[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilotcode-sdk"
version = "0.2.0"
description = "Pure-Python CopilotCode workflows layered onto the GitHub Copilot SDK."
readme = "README.copilotcode.md"
requires-python = ">=3.11"
dependencies = ["github-copilot-sdk>=0.2.0"]

[project.optional-dependencies]
dev = ["build>=1.2", "hypothesis>=6.0", "pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
copilotcode = "copilotcode_sdk.cli:main"

[tool.setuptools]
packages = ["copilotcode_sdk"]

[tool.setuptools.package-data]
copilotcode_sdk = ["skills/*/SKILL.md", "templates/*.md", "COMPATIBILITY.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
markers = [
  "live: tests that require a real authenticated Copilot runtime",
  "packaging: tests that build and install distribution artifacts",
]
